--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,6 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.7.3'
     runtimeOnly'org.postgresql:postgresql'
 
-    // Dependências para testes
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
     testImplementation 'org.mockito:mockito-core:5.11.0'
@@ -50,19 +49,13 @@ dependencies {
 
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
-    //JWT
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'
+    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.6.0'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
 
-//    //gradle lombok
-//
-//    compileOnly 'org.projectlombok:lombok:1.18.34'
-//    annotationProcessor 'org.projectlombok:lombok:1.18.34'
-//
-//    testCompileOnly 'org.projectlombok:lombok:1.18.34'
-//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
 
 
 }
